Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122001

QMainWindow::tabifiedDockWidgets() - Not accurate

XMLWordPrintable

    • All
    • cd2a3e970 (dev), 5e89966da (6.7), b8ed5def0 (6.6), b00f0a383 (tqtc/lts-6.5)

      The method QMainWindow::tabifiedDockWidgets() is not accurate. It may return docks from a previous tabification.

      Steps to Reproduce:
      1. Download attached dockwidgets.zip, extract, and build
      2. Launch the sample application
      3. Press the Refresh Tab Counts button
      4. Notice that all dock widgets list 0 tab "buddies" (correct)
      5. Pull off dock #2 (bottom dock) and tabify with dock #3.
      6. Press the Refresh Tab Counts button
      7. Notice that dock #2 and dock #3 list 1 tab buddy (correct).
      8. Pull off dock #2, but do NOT dock again. Leave dock #2 floating.
      9. Press the Refresh Tab Counts button
      10. Notice that dock #2 shows 0 tab buddies, but dock #3 still lists 1 tab buddy (incorrect).
       

        1. dockwidgets.zip
          2 kB
          Chakib Boutaghane
        For Gerrit Dashboard: QTBUG-122001
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            chakib Chakib Boutaghane
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes