src/widgets/widgets/qmainwindowlayout.cpp
@@ -1885,12 +1885,24 @@ public:
     ~QMainWindowTabBar();
     QDockWidget *dockAt(int index) const;
     QList<QDockWidget *> dockWidgets() const;
+    bool contains(const QDockWidget *dockWidget) const;
 protected:
     bool event(QEvent *e) override;
     void mouseReleaseEvent(QMouseEvent*) override;
     void mouseMoveEvent(QMouseEvent*) override;
 
 };
+
+QMainWindowTabBar *QMainWindowLayout::findTabBar(const QDockWidget *dockWidget) const
+{
+     for (auto *bar : usedTabBars) {
+        Q_ASSERT(qobject_cast<QMainWindowTabBar *>(bar));
+        auto *tabBar = static_cast<QMainWindowTabBar *>(bar);
+        if (tabBar->contains(dockWidget))
+            return tabBar;
+    }
+    return nullptr;
+}
 
 QMainWindowTabBar::QMainWindowTabBar(QMainWindow *parent)
     : QTabBar(parent), mainWindow(parent)
@@ -1906,6 +1918,15 @@ QList<QDockWidget *> QMainWindowTabBar::dockWidgets() const
             docks << dock;
     }
     return docks;
+}
+
+bool QMainWindowTabBar::contains(const QDockWidget *dockWidget) const
+{
+    for (int i = 0; i < count(); ++i) {
+        if (dockAt(i) == dockWidget)
+            return true;
+    }
+    return false;
 }
 
 QDockWidget *QMainWindowTabBar::dockAt(int index) const
@@ -2011,21 +2032,26 @@ bool QMainWindowTabBar::event(QEvent *e)
     return true;
 }
 
+QList<QDockWidget *> QMainWindowLayout::tabifiedDockWidgets(const QDockWidget *dockWidget) const
+{
+    const auto *bar = findTabBar(dockWidget);
+    if (!bar)
+        return {};
+
+    QList<QDockWidget *> buddies = bar->dockWidgets();
+    // Return only other dock widgets associated with dockWidget in a tab bar.
+    // If dockWidget is alone in a tab bar, return an empty list.
+    buddies.removeOne(dockWidget);
+    return buddies;
+}
+
 bool QMainWindowLayout::isDockWidgetTabbed(const QDockWidget *dockWidget) const
 {
-    for (auto *bar : std::as_const(usedTabBars)) {
-        // A single dock widget in a tab bar is not considered to be tabbed.
-        // This is to make sure, we don't drag an empty QDockWidgetGroupWindow around.
-        // => only consider tab bars with two or more tabs.
-        if (bar->count() <= 1)
-            continue;
-        auto *tabBar = qobject_cast<QMainWindowTabBar *>(bar);
-        Q_ASSERT(tabBar);
-        const auto dockWidgets = tabBar->dockWidgets();
-        if (std::find(dockWidgets.begin(), dockWidgets.end(), dockWidget) != dockWidgets.end())
-            return true;
-    }
-    return false;
+    // A single dock widget in a tab bar is not considered to be tabbed.
+    // This is to make sure, we don't drag an empty QDockWidgetGroupWindow around.
+    // => only consider tab bars with two or more tabs.
+    const auto *bar = findTabBar(dockWidget);
+    return bar && bar->count() > 1;
 }
 
 QTabBar *QMainWindowLayout::getTabBar()
